# os

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  build_flags.cmake  qodana.sarif.json  qodana.yaml  test.cmake
.github/workflows/: code-quality.yaml  iso.yaml  report.yaml  test.yaml
disk/: file.txt
disk/folder/: another-file.txt
grub/: grub.cfg
kernel/: Makefile  kernel.cmake
kernel/include/: buffer.h  canvas.h  color.h  cpu_structure.h  cpuid.h  createbuffer.h  ext2.h  gdt.h  ide.h  idt.h  interrupts.h  isr.h  mem.h  multiboot.h  multiboot2.h  paging.h  pci.h  pic.h  pmm.h  privatestdbuf.h  psf.h  serial.h  terminal.h  vfs.h
kernel/include/acpi/: acpiPreload.h  hpet.h  madt.h  rsdp.h  rsdt.h  srat.h
kernel/src/asm/: boot.asm  cpuid.asm  exceptions.asm  gdt.asm  idt.asm  interrupts.asm  page.asm
kernel/src/c/: kernel.c
kernel/src/c/acpi/: acpiPreload.c  hpet.c  madt.c  rsdp.c  rsdt.c  srat.c
kernel/src/c/cpu/: cpu_structure.c
kernel/src/c/cpuid/: cpuid.c
kernel/src/c/file/: buffer.c  createbuffer.c
kernel/src/c/gdt/: gdt.c
kernel/src/c/graphics/: canvas.c
kernel/src/c/idt/: idt.c
kernel/src/c/interrupts/: keyboard.c
kernel/src/c/isr/: exception.c  interrupt.c
kernel/src/c/mem/: malloc.c  page.c  pmm.c
kernel/src/c/pci/: read.c  (+1 more)
kernel/src/ld/: linker.ld
kernel/test/include/: cpuid_mock.h  portio_mock.h
kernel/test/src/: cpuid_mock.cpp  cpuid_test.cpp  idt_test.cpp  interrupt_mock.cpp  mem_mock.cpp  portio_mock.cpp  rsdp.cpp  serial_test.cpp
libc/: Makefile  libc.cmake  libc_mangling.cmake
libc/include/: buffer.h  libc_name.h  stdio.h  string.h
libc/src/c/: strcat.c  strchr.c  strlen.c
libc/test/include/: libc_modified.h
libc/test/src/: string_tests.cpp
libk/: Makefile  libk.cmake
libk/include/: buffer.h  canvas.h  color.h  font.h  system.h  terminal.h
libk/test/src/: buffer_test.cpp
src/c/: kernel.c
tools/: build.sh  iso.sh  mkhdd.sh  qemu.sh  runtests.sh
(+36 files in other folders)
